--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,25 +1,100 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
+# This workflow will build a golang project and publish builds to GitHub Releases
+# Triggers on tag pushes (v*) or via manual workflow_dispatch (provide tag input)
 name: Go
 
 on:
+  push:
+    tags:
+      - 'v*'
   workflow_dispatch:
+    inputs:
+      tag:
+        description: 'Tag to release (e.g. v1.2.3). Required when running manually.'
+        required: false
+        default: ''
+
+permissions:
+  contents: write
 
 jobs:
 
   build:
-    runs-on: ubuntu-latest
+    name: Build ${{ matrix.goos }}-${{ matrix.goarch }}
+    runs-on: ${{ matrix.runner }}
+    strategy:
+      matrix:
+        include:
+          - runner: ubuntu-latest
+            goos: linux
+            goarch: amd64
+            ext: ""
+          - runner: windows-latest
+            goos: windows
+            goarch: amd64
+            ext: ".exe"
+          - runner: macos-latest
+            goos: darwin
+            goarch: amd64
+            ext: ""
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.25'
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.25'
 
-    - name: Build
-      run: go build -v ./...
+      - name: Build
+        env:
+          GOOS: ${{ matrix.goos }}
+          GOARCH: ${{ matrix.goarch }}
+          CGO_ENABLED: 0
+        run: |
+          output_name="cakefetch-${{ matrix.goos }}-${{ matrix.goarch }}${{ matrix.ext }}"
+          mkdir -p build
+          echo "Building ${output_name}"
+          GOOS=${GOOS} GOARCH=${GOARCH} go build -ldflags="-s -w" -o "build/${output_name}" ./...
+          ls -la build
 
-    - name: Test
-      run: go test -v ./...
+      - name: Package build (zip)
+        run: |
+          output_name="cakefetch-${{ matrix.goos }}-${{ matrix.goarch }}${{ matrix.ext }}"
+          artifact_name="cakefetch-${{ matrix.goos }}-${{ matrix.goarch }}.zip"
+          cd build
+          if [[ "${{ matrix.runner }}" == "windows-latest" ]]; then
+            # On Windows runner, use PowerShell Compress-Archive
+            pwsh -Command "Compress-Archive -Path '${output_name}' -DestinationPath '${artifact_name}' -Force"
+          else
+            zip -j "${artifact_name}" "${output_name}"
+          fi
+          ls -la
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: ${{ matrix.goos }}-${{ matrix.goarch }}
+          path: build/*.zip
+
+  release:
+    name: Create Release and upload artifacts
+    runs-on: ubuntu-latest
+    needs: build
+    if: ${{ github.ref_name != '' || github.event.inputs.tag != '' }}
+    steps:
+      - name: Download all artifacts
+        uses: actions/download-artifact@v3
+        with:
+          path: dist
+
+      - name: List downloaded artifacts
+        run: |
+          echo "Artifacts in dist:"
+          ls -la dist
+
+      - name: Create GitHub Release and upload assets
+        # This action will create a release from the provided tag and upload files.
+        uses: ncipollo/release-action@v1
+        with:
+          tag: ${{ github.ref_name != '' && github.ref_name || github.event.inputs.tag }}
+          name: ${{ github.ref_name != '' && github.ref_name || github.event.inputs.tag }}
+          files: dist/*
