--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,5 +1,5 @@
-# This workflow will build a golang project and publish builds to GitHub Releases
-# Triggers on tag pushes (v*) or via manual workflow_dispatch (provide tag input)
+# Build for Linux (linux/amd64), package source + executable, upload artifact.
+# Trigger: tag push (v*) or manual (provide tag input).
 name: Go
 
 on:
@@ -14,73 +14,57 @@ on:
         default: ''
 
 permissions:
-  contents: write
+  contents: read
 
 jobs:
-
   build:
-    name: Build ${{ matrix.goos }}-${{ matrix.goarch }}
+    name: Build and package (linux-amd64)
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        include:
-          - goos: linux
-            goarch: amd64
-            ext: ""
+    if: ${{ github.ref_name != '' || github.event.inputs.tag != '' }}
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
           go-version: '1.25'
 
-      - name: Build
-        env:
-          GOOS: ${{ matrix.goos }}
-          GOARCH: ${{ matrix.goarch }}
-          CGO_ENABLED: 0
+      - name: Determine tag
         run: |
-          output_name="cakefetch-${{ matrix.goos }}-${{ matrix.goarch }}${{ matrix.ext }}"
+          echo "TAG=${{ github.ref_name != '' && github.ref_name || github.event.inputs.tag }}" >> $GITHUB_ENV
+
+      - name: Build (linux/amd64)
+        env:
+          CGO_ENABLED: 0
+          GOOS: linux
+          GOARCH: amd64
+        run: |
+          set -euo pipefail
           mkdir -p build
-          echo "Building ${output_name}"
-          GOOS=${GOOS} GOARCH=${GOARCH} go build -ldflags="-s -w" -o "build/${output_name}" ./...
+          output="cakefetch-${TAG}-linux-amd64"
+          echo "Building ${output}"
+          GOOS=${GOOS} GOARCH=${GOARCH} CGO_ENABLED=${CGO_ENABLED} \
+            go build -ldflags="-s -w" -o "build/${output}" ./...
           ls -la build
 
-      - name: Package build (zip)
+      - name: Package source + executable (tar.gz)
         run: |
-          output_name="cakefetch-${{ matrix.goos }}-${{ matrix.goarch }}${{ matrix.ext }}"
-          artifact_name="cakefetch-${{ matrix.goos }}-${{ matrix.goarch }}.zip"
-          cd build
-          zip -j "${artifact_name}" "${output_name}"
-          ls -la
+          set -euo pipefail
+          pkgroot="pkg"
+          packagedir="${pkgroot}/cakefetch-${TAG}"
+          rm -rf "${pkgroot}"
+          mkdir -p "${packagedir}"
+          # Export tracked files from git into the package dir
+          git archive --format=tar HEAD | tar -x -C "${packagedir}"
+          # Copy the built binary into the package dir
+          cp "build/cakefetch-${TAG}-linux-amd64" "${packagedir}/"
+          # Create a single tar.gz containing the top-level folder cakefetch-<tag>/
+          tar -czf "cakefetch-${TAG}-linux-amd64.tar.gz" -C "${pkgroot}" "cakefetch-${TAG}"
+          ls -la "cakefetch-${TAG}-linux-amd64.tar.gz"
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
-          name: ${{ matrix.goos }}-${{ matrix.goarch }}
-          path: build/*.zip
-
-  release:
-    name: Create Release and upload artifacts
-    runs-on: ubuntu-latest
-    needs: build
-    if: ${{ github.ref_name != '' || github.event.inputs.tag != '' }}
-    steps:
-      - name: Download all artifacts
-        uses: actions/download-artifact@v3
-        with:
-          path: dist
-
-      - name: List downloaded artifacts
-        run: |
-          echo "Artifacts in dist:"
-          ls -la dist
-
-      - name: Create GitHub Release and upload assets
-        # This action will create a release from the provided tag and upload files.
-        uses: ncipollo/release-action@v1
-        with:
-          tag: ${{ github.ref_name != '' && github.ref_name || github.event.inputs.tag }}
-          name: ${{ github.ref_name != '' && github.ref_name || github.event.inputs.tag }}
-          files: dist/*
+          name: cakefetch-${{ env.TAG }}-linux-amd64
+          path: cakefetch-${{ env.TAG }}-linux-amd64.tar.gz
